# TipTorch

./: .gitattributes  .gitignore  AAAAA.py  Guido_tests.py  LICENSE  MUSE.py  MUSE_check.py  PSFAO.py  PSFAO_SPHERE.py  README.md  SPHERE_data  SPHERE_data.py  TipToy.py  TipToy_MUSE.py  TipToy_SPHERE.py  TipToy_SPHERE_multisrc.py  VLT_pupil.py  buf_weights.dict  buffy_SPHERE.py  compare_PSFs.py  config_converter.py  fitting_PSFAO.py  fitting_TipToy.py  globals.py  gnosis_weights.dict  gnosis_weights_psfao.dict  handwritten_digit_recognition_GPU.ipynb  main.py  main_SPHERE.py  main_polychrome.py  optim_test.py  please_work.py  project_config.json  project_globals.py  project_settings.py  pyproject.toml  requirements.txt  setup_env_Linux_MacOS_WSL.sh  setup_env_Windows.ps1  test_lsq_lma.py  (+2 more)
PSF_models/: IRDIS_wrapper.py  NFM_wrapper.py  PSFAO_SPHERE.py  SPHERE_data.py  TipTorch.py  TipTorch_half.py  TipToy_MUSE.py  TipToy_MUSE2.py  TipToy_MUSE3.py  TipToy_MUSE_multisrc.py  TipToy_SPHERE.py  TipToy_SPHERE_multisrc.py  TipToy_SPHERE_multisrc_2.py  main.py  main_polychrome.py
agents/: AGENTS.md  PLANS.md
conda/: meta.yaml
data/: GALACSI_keywords.txt  datalab_misc.txt
data_processing/: MUSE_STD_dataset_utils.py  MUSE_STD_stars_labeler.py  MUSE_check.py  MUSE_create_STD_dataset.py  MUSE_create_datasets.py  MUSE_data.py  MUSE_data_settings.py  MUSE_data_utils.py  MUSE_fitted_df.py  MUSE_fitted_df_legacy_imgs.py  MUSE_myonsky.py  MUSE_onsky_df.py  MUSE_prepare_dataset.py  MUSE_preproc_utils.py  MUSE_preproc_utils_old.py  MUSE_process_cubes.py  MUSE_read_preproc.py  MUSE_sample_labeler.py  MUSE_sample_rotator.py  OOPAO_dataset.py  SPHERE_PSF_classifier.py  SPHERE_STD_dataset_utils.py  SPHERE_data.py  SPHERE_data_2.py  SPHERE_data_settings.py  SPHERE_data_utils.py  SPHERE_fitted_df.py  SPHERE_labeling.py  SPHERE_onsky_df.py  SPHERE_prepare_dataset.py  SPHERE_preproc_utils.py  SPHERE_sample_labeler.py  data_analysis_utils.py  dataset_viewer.py  labeling.py  normalizers.py  pickle_convert.py
datasets/: HST_NFM_NGC_0104.py  HST_NFM_omega_cen.py
deprecated/: MUSE_Torch2Top.py  MUSE_multisrc.py  MUSE_multisrc_refactored_old.py  MUSE_quasars.py  SPHERE_nested.py  SPHERE_pyro.py  calibrator.py  pytorch_to_sklearn_transfer.py  train_NFM_calibrator.py  train_NFM_calibrator_kfold.py
development/: Gauss_rotate.py  MUSE_EE_test.py  MUSE_OB.py  MUSE_OB_example.py  MUSE_OB_refactor.py  MUSE_OB_test.py  MUSE_models_profiler.py  MUSE_multisrc.py  MUSE_multisrc_refactored.py  MUSE_multisrc_refactored_new.py  MUSE_omega_cen.py  MUSE_onsky.py  MUSE_quasar.py  MUSE_seeing_theta_test.py  PSD_comparison_with_P3.py  SPHERE_example.ipynb  SPHERE_onsky.py  fetch_raw_hdr.py  unit_tests.py
fitting/: PSF_optimizer.py  fitter_MUSE.py  fitter_MUSE_multichrome.py  fitter_SPHERE.py  fitter_SPHERE_OOPAO.py  fitter_SPHERE_PSFAO.py  fitter_SPHERE_new.py  fitting_PSFAO.py  fitting_TipToy.py  quick_fitted_analysis.py
machine_learning/: MLP.py  MUSE_fitted_df.py  MUSE_onsky_df.py  MUSE_prepare_dataset.py  MUSE_sklearn.py  NFM_calibrator_config.json  NeRF.py  SPHERE_LWE_test.py  SPHERE_fitted_df.py  SPHERE_onsky_df.py  SPHERE_prepare_dataset.py  SPHERE_sklearn.py  calibrator.py  (+22 more)
(+135 files in other folders)
