[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tiptorch"
dynamic = ["version"]
description = "A PyTorch-based adaptive optics PSF simulator for astronomical instruments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Arseniy Kuznetsov" },
]
keywords = ["adaptive-optics", "PSF", "astronomy", "pytorch", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "torch",
    "torchvision",
    "numpy>=2.0",
    "scipy",
    "astropy>=7.0",
    "pyyaml",
    "tabulate",
    "pooch",
    "gdown",
    "pytorch-minimize",
]

[project.optional-dependencies]
cupy = ["cupy"]
dev = [
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scikit-image",
    "photutils>=2.0",
    "astroquery",
    "pandas",
    "tqdm",
    "pillow",
    "build",
]

[project.urls]
Repository = "https://github.com/EjjeSynho/TipTorch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tiptorch._resources" = ["*.json", "*.yaml"]

[tool.setuptools-scm]
version_file = "src/tiptorch/_version.py"
fallback_version = "0.0.1.dev0"
